fdo#51832: SwRedlineAcceptDlg: fix STL conversion:

62b7606fddfef9e1a7645a2d3d605f1fa3aee263 wrongly converted the call to
aRedlineParents.DeleteAndDestroy() in
SwRedlineAcceptDlg::RemoveParents() and erases one element less than
the old code, which results in access to deleted SvListEntry and crash.

Change-Id: Ie2749cb3f17b36649adff46c166642fccde31329